--- a/index.html
+++ b/index.html
@@ -9,18 +9,36 @@
   </head>
   <body>
     <div>
-      <div id="header">
-        <p>{{name}}</p>
-        <div id="menu">
-          <ul>
-            <li>CV</li>
-            <li>GitHub</li>
-            <li>Contact</li>
-          </ul>
-        </div>
-      </div>
-      <div id="content">
-        <p>{{date}}</p>
+      <header>
+        <p>
+          <input type="text" name="name" placeholder="your-name" />
+        </p>
+        <nav>
+          <menu>
+            <li>
+              <a
+                href="https://drive.google.com/file/d/1fhyW4G_KNFnhY3PWNGF2yBy1yuG4i3dO/view?usp=sharing"
+                target="_blank"
+                >CV</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://github.com/Abdullah-Eldemerdash95"
+                target="_blank"
+                >GitHub</a
+              >
+            </li>
+            <li>
+              <a id="myBtn" href="#">Contact</a>
+            </li>
+          </menu>
+        </nav>
+      </header>
+      <section>
+        <p>
+          <button>Get Date</button>
+        </p>
         <div>
           <p>
             I had seen little of Holmes lately. My marriage had drifted us away
@@ -70,13 +88,36 @@
             fashion.
           </p>
         </div>
-        <div id="footer">
-          <div>
-            <p>
-              Passage adapted from Arthur Conan Doyle's "A Scandal in Bohemia"
-              (1891)
-            </p>
-          </div>
+      </section>
+      <footer>
+        <div>
+          <p>
+            Passage adapted from Arthur Conan Doyle's "A Scandal in Bohemia"
+            (1891)
+          </p>
+        </div>
+      </footer>
+      <div id="myModal" class="modal">
+        <!-- Modal content -->
+        <div class="modal-content">
+          <span class="close">&times;</span>
+          <menu>
+            <li>Phone Number: <a href="tel:+0201004378432">01004378432</a></li>
+            <li>
+              Email:
+              <a href="mailto:abdullah.eldemedrash@gmail.com"
+                >abdullah.eldemedrash@gmail.com</a
+              >
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/abdullah-eldemerdash95/"
+                >LinkedIn
+              </a>
+            </li>
+            <li>
+              <a href="https://github.com/Abdullah-Eldemerdash95">Github </a>
+            </li>
+          </menu>
         </div>
       </div>
     </div>
